# Zhipu-AI-Valuation

./: .gitignore  DATA_TABLES.md  EVENT_STUDY.md  OUTLINE.md  README.md  pyproject.toml  requirements.txt
data/: MiniMax_daily.csv  WengeAI_daily.csv  Zhipu_KnowledgeAtlas_daily.csv  comps_beta_bridge.csv  comps_beta_bridge_input.csv  event_catalog_input.csv  price_summary.csv
demo/: ipo_valuation_demo.html
eventstudy/: base_projection.csv  block_bootstrap_distribution.csv  block_bootstrap_summary.csv  car_robustness.csv  event_catalog.csv  event_panel.csv  event_panel_summary.csv  nonparametric_robustness.csv  reverse_dcf_sensitivity.csv  valuation_summary.csv
model/: valuation_model.xlsx
paper/: beta_bridge_auto.tex  main.bbl  main.tex  refs.bib
scripts/: build_project.py  comps_beta_and_reverse_dcf.py  event_panel.py  rebuild_outputs.py  validate_outputs.py
tests/: test_core.py
